--- a/style.css
+++ b/style.css
@@ -60,9 +60,10 @@ html {
 }
 
 .person-img {
-  width: 25rem;
-  height: 25rem;
-  object-fit: cover;
+  width: 30rem;
+  height: 30rem;
+  align-items: center;
+  object-fit: center;
   border-radius: 50%;
   border: 0.7rem dotted #e41c6f;
   background-color: rgba(255, 255, 255, 0.7);
